--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -47,7 +47,7 @@
         </plugins>
     </build>
     <properties>
-        <mainClass>net.rnvn.MyClass</mainClass>        
+        <mainClass>net.rnvn.Backend</mainClass>        
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>20</maven.compiler.source>
         <maven.compiler.target>20</maven.compiler.target>
