--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -53,4 +53,13 @@
         <maven.compiler.target>20</maven.compiler.target>
     </properties>
 
+
+
+    <dependencies>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.33</version>
+        </dependency>
+    </dependencies>
 </project>
