--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -18,4 +18,10 @@
   <build>
     <finalName>Frontend</finalName>
   </build>
+
+  <!-- specify JDK version -->
+  <properties>
+    <maven.compiler.source>20</maven.compiler.source>
+    <maven.compiler.target>20</maven.compiler.target>
+  </properties>
 </project>
