added example servlets

--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -9,6 +9,13 @@
     <name>frontent</name>
     <url>http://maven.apache.org</url>
     <dependencies>
+
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>8.0.1</version>
+        </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
