--- a/frontend/src/main/webapp/WEB-INF/web.xml
+++ b/frontend/src/main/webapp/WEB-INF/web.xml
@@ -14,6 +14,15 @@
         <url-pattern>/login</url-pattern>
 </servlet-mapping>
 
+<servlet>
+        <servlet-name>GestorRegistro</servlet-name>
+        <servlet-class>net.rnvn.frontend.credenciales.GestorRegistro</servlet-class>
+</servlet>
+<servlet-mapping>
+        <servlet-name>GestorRegistro</servlet-name>
+        <url-pattern>/GestorRegistro</url-pattern>
+        <url-pattern>/register</url-pattern>
+</servlet-mapping>
 
 <session-config>
     <session-timeout>
