moved project to webapi

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>backend</module>
-        <module>frontend</module>
+        <module>webapi</module>
     </modules>
 
 
