--- a/webapi/pom.xml
+++ b/webapi/pom.xml
@@ -3,7 +3,7 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>net.rnvn</groupId>
-    <artifactId>frontend</artifactId>
+    <artifactId>webapi</artifactId>
     <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
     <name>frontent</name>
@@ -57,7 +57,7 @@
         </dependency>
     </dependencies>
     <build>
-        <finalName>frontend</finalName>
+        <finalName>webapi</finalName>
     </build>
 
     <!-- specify JDK version -->
